# serenity-template

./: Cargo.toml  LICENSE  README.md  about.toml  deny.toml
.github/workflows/: build.yml
src/: input_token.rs  main.rs
